# whisper-notes

./: .gitignore  Cargo.toml  README.md
src/: main.rs
